# hotspot-copywriter

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py
app/api/: collect_runs.py  health.py  hotspots.py  routes.py
app/collectors/: __init__.py  base.py  crawl4ai.py  daily_hot.py  rsshub.py
app/core/: __init__.py  config.py
app/db/: base.py  init_db.py  session.py
app/models/: hotspot.py  organized_hotspot.py  run_log.py
app/scheduler/: __init__.py  jobs.py  runner.py
app/schemas/: __init__.py  collect_run.py  health.py  hotspot.py  organized_hotspot.py
app/services/: __init__.py  hotspot_service.py  organize_service.py
tests/: test_api_routes.py  test_daily_hot_collector.py  test_hotspot_service.py  test_init_db.py  test_organize_service.py  test_organized_hotspot.py  test_runner.py  test_scheduler_jobs.py
